--- a/app.json
+++ b/app.json
@@ -9,7 +9,7 @@
          "manager",
          "AstrakoBot"
       ],   
-   "repository": "https://github.com/ManusiaRakitan/Koala",
+   "repository": "https://github.com/inu93/Koala",
    "addons": [
       {
          "options": {
